src/quick/scenegraph/qsgthreadedrenderloop.cpp
@@ -525,13 +525,12 @@ void QSGRenderThread::invalidateGraphics(QQuickWindow *window, bool inDestructor
 
     QQuickWindowPrivate *dd = QQuickWindowPrivate::get(window);
 
-#if QT_CONFIG(quick_shadereffect)
-    QSGRhiShaderEffectNode::cleanupMaterialTypeCache();
-#endif
-
     // The canvas nodes must be cleaned up regardless if we are in the destructor..
     if (wipeSG) {
         dd->cleanupNodesOnShutdown();
+#if QT_CONFIG(quick_shadereffect)
+        QSGRhiShaderEffectNode::cleanupMaterialTypeCache();
+#endif
     } else {
         qCDebug(QSG_LOG_RENDERLOOP, QSG_RT_PAD, "- persistent SG, avoiding cleanup");
         return;
